# UpStream

./: .gitignore  .gitmodules  README.md  flake.nix  k3d-config.yaml
.ssh/: config
ansible/: README.md  ansible.cfg  inventory.yml
mpc-scaler-flink/: .envrc  Dockerfile  README.md  flake.nix  plot.py  pyproject.toml  test_time_series.json
mpc-scaler-flink/helm-charts/mpc-scaler-flink/: Chart.yaml  values.yaml
mpc-scaler-flink/helm-charts/mpc-scaler-flink/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
mpc-scaler-flink/helm-charts/mpc-scaler-flink/templates/tests/: test-connection.yaml
mpc-scaler-flink/src/mpc_scaler_flink/: main.py  pod.py
mpc-scaler-flink/tests/: generate_time_series_test_data.py  test_mpc_controller.py  test_pod_allocator.py
nix/scripts/: forward_kubectl  ssh
senMLScenarioBuilder/: README.md  flake.nix  pyproject.toml
senMLScenarioBuilder/src/mpc_scaler_flink/: mpc_controller.py  pod_allocator.py
senMLScenarioBuilder/src/scenario-builder/: main.py
