[tool.poetry]
name = "scenario-builder"
version = "0.1.0"
description = ""
authors = ["eprader <56026248+eprader@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "scenario-builder", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.2"

[tool.poetry.group.dev.dependencies]

matplotlib = "^3.9.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.scripts]
main = "scenario-builder:main"
